<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quran.QuranFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header / Search Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/gray_800">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_hint"
                app:queryBackground="@android:color/transparent" />
        </androidx.cardview.widget.CardView>

        <!-- Horizontal Chips container -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Reciter Selector -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reciter"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_reciter"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/huda_gold_dark"
                    app:chipIcon="@drawable/ic_quran_m3"
                    app:chipIconTint="@color/huda_gold"
                    app:chipCornerRadius="20dp"
                    app:chipStrokeColor="@color/huda_gold"
                    app:chipStrokeWidth="1dp" />

                <!-- Separator / Spacer -->
                <View
                    android:layout_width="16dp"
                    android:layout_height="1dp" />

                <!-- Mecca / Medina filter group -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_filter_all"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_all"
                        android:textColor="@color/white"
                        android:checked="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_filter_mecca"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_mecca"
                        android:textColor="@color/white" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_filter_medina"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_medina"
                        android:textColor="@color/white" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>
        </HorizontalScrollView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_sourate"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
